<resources>
    <string name="app_name">ClickBalls</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_registration">Create a new account</string>
    <string name="user_login">Member Login</string>
    <string name="register">Register</string>
    <string name="guest">Guest</string>
    <string name="initial_score">SCORE - 0</string>
    <string name="dynamic_score">SCORE - %1$d</string>
    <string name="initial_time">TIME - 0:60</string>
    <string name="initial_dynamic_time">TIME - 0:%1$d</string>
    <string name="dynamic_time">TIME - %1$d:%2$d</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">"Welcome ! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="cancel">Cancel</string>

    <string name="achievements">Achievements</string>
    <string name="no_data">No data</string>
    <string name="pink_win">CLICK PINK BALL</string>
    <string name="white_win">CLICK WHITE BALL</string>
    <string name="red_win">CLICK RED BALL</string>
    <string name="title_activity_levels_list">LevelsListActivity</string>
    <string name="tab_text_1">EASY</string>
    <string name="tab_text_2">MEDIUM</string>
    <string name="tab_text_3">HARD</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">User Info</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your Name</string>
    <string name="time_title">Default time value</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync scores periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="usd">$</string>
</resources>
