<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="60"
            app:entries="@array/time_entries"
            app:entryValues="@array/time_values"
            app:key="time"
            app:title="@string/time_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <!--        <SwitchPreferenceCompat-->
        <!--            app:dependency="sync"-->
        <!--            app:key="attachment"-->
        <!--            app:summaryOff="@string/attachment_summary_off"-->
        <!--            app:summaryOn="@string/attachment_summary_on"-->
        <!--            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>