<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/first_activity_background"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingTop="100dp"
    android:paddingEnd="40dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_register"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dark_wood_button"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dark_wood_button"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_guest"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:background="@drawable/dark_wood_button"
        android:text="@string/guest"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>
