<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/green_grass"
    android:backgroundTint="#148414"
    android:backgroundTintMode="multiply">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/user_registration"
        android:textColor="@color/lightGray"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/prompt_username"
        android:layout_margin="20dp"
        android:textColorHint="@color/lightBlack"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintTop_toBottomOf="@+id/registerText"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:hint="@string/prompt_email"
        android:background="@drawable/rounded_edit_text"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="@color/lightBlack"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintTop_toBottomOf="@+id/username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/prompt_password"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textColorHint="@color/lightBlack"
        app:layout_constraintBottom_toTopOf="@id/register_buttons"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <RelativeLayout
        android:id="@+id/register_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:background="@drawable/light_wood"
            android:text="@string/register"
            android:textColor="@color/lightBlack"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_guest"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:background="@drawable/light_wood"
            android:text="@string/guest"
            android:textSize="17sp"
            android:textColor="@color/lightBlack"
            android:layout_toEndOf="@+id/btn_register"
            android:layout_marginStart="20dp"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/register_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>